--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,15 @@ services:
         ipv4_address: 172.16.1.3
     depends_on:
       - etcd
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    networks:
+      default:
+        ipv4_address: 172.16.1.3
+
   etcd:
     image: bitnami/etcd
     environment:
